--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "jest": "^27.3.1",
     "lint-staged": ">=10",
     "prettier": "^2.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
