--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "outFile": "./dist/index.d.ts"
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "./src/**/*",
