--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
     "test": "yarn test:eslint && yarn test:jest",
     "test:eslint": "eslint --cache --fix '*.js' '{src,__tests__}/**/*.{js,ts,tsx}'",
     "test:jest": "jest --no-watchman",
+    "release:patch": "yarn build && release patch",
+    "release:minor": "yarn build && release minor",
+    "release:major": "yarn build && release major",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -64,6 +67,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "release": "^6.3.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4"
   },
