--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.26.1",
     "estrella": "^1.4.1",
     "husky": ">=6",
     "jest": "^27.3.1",
