--- a/site/package.json
+++ b/site/package.json
@@ -15,5 +15,9 @@
     "nextra-theme-docs": "^1.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.34",
+    "typescript": "^4.4.4"
   }
 }
