--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-          cache: yarn
+          cache: pnpm
       - name: Install
-        run: yarn
+        run: pnpm install
       - name: Build
-        run: yarn build
+        run: pnpm build
   test:
     runs-on: ubuntu-latest
     steps:
@@ -26,8 +26,8 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-          cache: yarn
+          cache: pnpm
       - name: Install
-        run: yarn
+        run: pnpm install
       - name: Run tests
-        run: yarn test
+        run: pnpm test
